--- a/dts/arm/ambiq/ambiq_apollo4p_blue.dtsi
+++ b/dts/arm/ambiq/ambiq_apollo4p_blue.dtsi
@@ -32,6 +32,35 @@
 		cpu0: cpu@0 {
 			compatible = "arm,cortex-m4f";
 			reg = <0>;
+			cpu-power-states = <&idle &suspend_to_ram>;
+		};
+
+		power-states {
+			idle: idle {
+				compatible = "zephyr,power-state";
+				power-state-name = "suspend-to-idle";
+				/*
+				 * As Apollo4 datasheet, run_to_sleep and sleep_to_run
+				 * transition time are both lower than 1us, but
+				 * considering the software overhead we set a
+				 * bigger value.
+				 */
+				min-residency-us = <100>;
+				exit-latency-us = <5>;
+			};
+
+			suspend_to_ram: suspend_to_ram {
+				compatible = "zephyr,power-state";
+				power-state-name = "suspend-to-ram";
+				/*
+				 * As Apollo4 datasheet, run_to_deepsleep transition
+				 * time is lower than 1us and deepsleep_to_run
+				 * transition time is about 25us, but considering
+				 * the software overhead, we set a bigger value.
+				 */
+				min-residency-us = <2000>;
+				exit-latency-us = <125>;
+			};
 		};
 	};
 
@@ -58,7 +87,7 @@
 			#address-cells = <1>;
 			#size-cells = <1>;
 
-			/* MRAM region */
+			/* Flash region */
 			flash0: flash@18000 {
 				compatible = "soc-nv-flash";
 				reg = <0x00018000 0x1e8000>;
@@ -93,7 +122,9 @@
 			status = "disabled";
 			clocks = <&uartclk>;
 			ambiq,pwrcfg = <&pwrcfg 0x4 0x200>;
+			zephyr,pm-device-runtime-auto;
 		};
+
 		uart1: uart@4001d000 {
 			compatible = "ambiq,uart", "arm,pl011";
 			reg = <0x4001d000 0x1000>;
@@ -102,6 +133,7 @@
 			status = "disabled";
 			clocks = <&uartclk>;
 			ambiq,pwrcfg = <&pwrcfg 0x4 0x400>;
+			zephyr,pm-device-runtime-auto;
 		};
 
 		uart2: uart@4001e000 {
@@ -112,6 +144,7 @@
 			status = "disabled";
 			clocks = <&uartclk>;
 			ambiq,pwrcfg = <&pwrcfg 0x4 0x800>;
+			zephyr,pm-device-runtime-auto;
 		};
 
 		uart3: uart@4001f000 {
@@ -122,6 +155,7 @@
 			status = "disabled";
 			clocks = <&uartclk>;
 			ambiq,pwrcfg = <&pwrcfg 0x4 0x1000>;
+			zephyr,pm-device-runtime-auto;
 		};
 
 		iom0: iom@40050000 {
