Revert "[nrf fromtree] boards: nrf54h20pdk_nrf54h20: use XIP for PPR"
This reverts commit 64e2ca95d6f82b8484eeed0abcfc95fb05c21d7b.

Signed-off-by: Robert Lubos <robert.lubos@nordicsemi.no>

--- a/boards/arm/nrf54h20pdk_nrf54h20/nrf54h20pdk_nrf54h20_cpuapp.dts
+++ b/boards/arm/nrf54h20pdk_nrf54h20/nrf54h20pdk_nrf54h20_cpuapp.dts
@@ -98,7 +98,8 @@
 };
 
 &cpuppr_vpr {
-	execution-memory = <&cpuppr_code_partition>;
+	source-memory = <&cpuppr_code_partition>;
+	execution-memory = <&cpuppr_ram3x_region>;
 };
 
 &gpiote130 {
