--- a/samples/drivers/mbox_data/remote/CMakeLists.txt
+++ b/samples/drivers/mbox_data/remote/CMakeLists.txt
@@ -9,8 +9,7 @@ find_package(Zephyr REQUIRED HINTS $ENV{ZEPHYR_BASE})
 
 if(("${BOARD}" STREQUAL "mimxrt1170_evkb_cm4") OR
   ("${BOARD}" STREQUAL "mimxrt1170_evk_cm4") OR
-  ("${BOARD}" STREQUAL "mimxrt1160_evk_cm4") OR
-  ("${BOARD}" STREQUAL "lpcxpresso55s69_cpu1"))
+  ("${BOARD}" STREQUAL "mimxrt1160_evk_cm4"))
   message(STATUS "${BOARD} compile as remote in this sample")
 else()
   message(FATAL_ERROR "${BOARD} is not supported for this sample")
