Revert "[nrf fromtree] tests/drivers/build_all/*: Switch to native_sim"
This reverts commit d01d7ceb658714724564975893f37bc055fb6a9f.

Signed-off-by: Robert Lubos <robert.lubos@nordicsemi.no>

--- a/tests/drivers/build_all/charger/testcase.yaml
+++ b/tests/drivers/build_all/charger/testcase.yaml
@@ -7,6 +7,4 @@ tests:
       - drivers
       - charger
     build_only: true
-    platform_allow:
-      - native_posix
-      - native_sim
+    platform_allow: native_posix
