--- a/tests/drivers/build_all/input/testcase.yaml
+++ b/tests/drivers/build_all/input/testcase.yaml
@@ -3,9 +3,7 @@ common:
     - drivers
     - input
   build_only: true
-  platform_allow:
-    - native_posix
-    - native_sim
+  platform_allow: native_posix
 tests:
   drivers.input.default: {}
 
