--- a/tests/drivers/build_all/dac/testcase.yaml
+++ b/tests/drivers/build_all/dac/testcase.yaml
@@ -6,9 +6,7 @@ common:
 tests:
   drivers.dac.build:
     # will cover I2C, SPI based drivers
-    platform_allow:
-      - native_posix
-      - native_sim
+    platform_allow: native_posix
     extra_args: "CONFIG_GPIO=y"
   drivers.dac.mcux.build:
     platform_allow: frdm_k22f
