--- a/tests/drivers/build_all/fpga/testcase.yaml
+++ b/tests/drivers/build_all/fpga/testcase.yaml
@@ -2,9 +2,7 @@ common:
   tags:
     - drivers
     - sensors
-  platform_allow:
-    - native_posix
-    - native_sim
+  platform_allow: native_posix
   build_only: true
 tests:
   drivers.fpga.build:
