Revert "[nrf fromtree] modules: tf-m: Rename crypto modules to ENABLED"
This reverts commit b3039fd008b0edbafb2a74a79c004ea2b27eb59d.

Signed-off-by: Robert Lubos <robert.lubos@nordicsemi.no>

--- a/modules/trusted-firmware-m/CMakeLists.txt
+++ b/modules/trusted-firmware-m/CMakeLists.txt
@@ -152,8 +152,11 @@ if (CONFIG_BUILD_WITH_TFM)
   foreach(module ${TFM_CRYPTO_MODULES})
     if (CONFIG_TFM_${module}_ENABLED)
       # list(APPEND TFM_ENABLED_CRYPTO_MODULES_ARG ${module})
-      list(APPEND TFM_CMAKE_ARGS -D${module}_ENABLED=True)
+      set(val "FALSE")
+    else()
+      set(val "TRUE")
     endif()
+    list(APPEND TFM_CMAKE_ARGS -D${module}_DISABLED=${val})
   endforeach()
 
   set(TFM_BINARY_DIR ${CMAKE_BINARY_DIR}/tfm)
