--- a/dts/bindings/gpio/nordic,nrf-gpiote.yaml
+++ b/dts/bindings/gpio/nordic,nrf-gpiote.yaml
@@ -5,9 +5,7 @@ description: NRF5 GPIOTE node
 
 compatible: "nordic,nrf-gpiote"
 
-include:
-  - base.yaml
-  - nordic,split-channels.yaml
+include: base.yaml
 
 properties:
   reg:
