--- a/dts/arm/nordic/nrf52810.dtsi
+++ b/dts/arm/nordic/nrf52810.dtsi
@@ -1,7 +1,7 @@
 /* SPDX-License-Identifier: Apache-2.0 */
 
 #include <arm/armv7-m.dtsi>
-#include <nordic/nrf_common.dtsi>
+#include "nrf_common.dtsi"
 
 / {
 	chosen {
@@ -346,9 +346,4 @@
 
 &nvic {
 	arm,num-irq-priority-bits = <3>;
-};
-
-&systick {
-	/* Use RTC for system clock, instead of SysTick. */
-	status = "disabled";
 };
