--- a/dts/arm/nordic/nrf52820.dtsi
+++ b/dts/arm/nordic/nrf52820.dtsi
@@ -5,7 +5,7 @@
  */
 
 #include <arm/armv7-m.dtsi>
-#include <nordic/nrf_common.dtsi>
+#include "nrf_common.dtsi"
 
 / {
 
@@ -398,9 +398,4 @@
 
 &nvic {
 	arm,num-irq-priority-bits = <3>;
-};
-
-&systick {
-	/* Use RTC for system clock, instead of SysTick. */
-	status = "disabled";
 };
