--- a/dts/arm/nordic/nrf5340_cpuapp.dtsi
+++ b/dts/arm/nordic/nrf5340_cpuapp.dtsi
@@ -5,7 +5,7 @@
  */
 
 #include <arm/armv8-m.dtsi>
-#include <nordic/nrf_common.dtsi>
+#include "nrf_common.dtsi"
 
 / {
 	cpus {
@@ -114,9 +114,4 @@
 
 &nvic {
 	arm,num-irq-priority-bits = <3>;
-};
-
-&systick {
-	/* Use RTC for system clock, instead of SysTick. */
-	status = "disabled";
 };
