--- a/dts/arm/nordic/nrf5340_cpuappns.dtsi
+++ b/dts/arm/nordic/nrf5340_cpuappns.dtsi
@@ -7,7 +7,7 @@
 /* .dtsi header for nRF5340 CPUAPP (Application MCU), Non-Secure domain */
 
 #include <arm/armv8-m.dtsi>
-#include <nordic/nrf_common.dtsi>
+#include "nrf_common.dtsi"
 
 / {
 	cpus {
@@ -76,9 +76,4 @@
 
 &nvic {
 	arm,num-irq-priority-bits = <3>;
-};
-
-&systick {
-	/* Use RTC for system clock, instead of SysTick. */
-	status = "disabled";
 };
