--- a/soc/arm/nordic_nrf/nrf91/CMakeLists.txt
+++ b/soc/arm/nordic_nrf/nrf91/CMakeLists.txt
@@ -1,3 +1,7 @@
 # SPDX-License-Identifier: Apache-2.0
 
-zephyr_library_sources(soc.c)
+zephyr_sources(
+  soc.c
+  )
+
+set(SOC_LINKER_SCRIPT ${ZEPHYR_BASE}/include/zephyr/arch/arm/cortex_m/scripts/linker.ld CACHE INTERNAL "")
