Revert "[nrf fromtree] soc: riscv: make RISCV_HAS_(C|P)LIC promptless"
This reverts commit 7a554229571ac87580d1007b10f55955050a4d6f.

Signed-off-by: Robert Lubos <robert.lubos@nordicsemi.no>

--- a/soc/riscv/common/riscv-privileged/Kconfig
+++ b/soc/riscv/common/riscv-privileged/Kconfig
@@ -5,13 +5,13 @@
 # SPDX-License-Identifier: Apache-2.0
 
 config RISCV_HAS_PLIC
-	bool
+	bool "Does the SOC provide support for a Platform Level Interrupt Controller (PLIC)"
 	depends on RISCV_PRIVILEGED
 	help
 	  Does the SOC provide support for a Platform Level Interrupt Controller (PLIC).
 
 config RISCV_HAS_CLIC
-	bool
+	bool "Does the SOC provide support for a Core-Local Interrupt Controller (CLIC)"
 	depends on RISCV_PRIVILEGED
 	help
 	  Does the SOC provide support for a Core-Local Interrupt Controller (CLIC).
