Revert "[nrf fromtree] soc: riscv: ite: reorganize SoC folder"
This reverts commit d6d4a4e5914ffbff3e49883bc3936249b6cfaf74.

Signed-off-by: Robert Lubos <robert.lubos@nordicsemi.no>

--- a/MAINTAINERS.yml
+++ b/MAINTAINERS.yml
@@ -2850,7 +2850,7 @@ ITE Platforms:
     - drivers/*/*it8xxx2*.c
     - dts/bindings/*/*ite*
     - dts/riscv/ite/
-    - soc/riscv/ite_ec/
+    - soc/riscv/riscv-ite/
   labels:
     - "platform: ITE"
 
