--- a/soc/riscv/common/riscv-privileged/Kconfig
+++ b/soc/riscv/common/riscv-privileged/Kconfig
@@ -4,12 +4,9 @@
 # Copyright (c) 2017 Jean-Paul Etienne <fractalclone@gmail.com>
 # SPDX-License-Identifier: Apache-2.0
 
-config RISCV_PRIVILEGED_STANDALONE
-	bool
-
 config SOC_FAMILY
 	string
-	default "riscv-privileged" if RISCV_PRIVILEGED && !RISCV_PRIVILEGED_STANDALONE
+	default "riscv-privileged" if RISCV_PRIVILEGED
 
 config RISCV_HAS_PLIC
 	bool "Does the SOC provide support for a Platform Level Interrupt Controller (PLIC)"
