Revert "[nrf fromtree] dts: arm: add new gpiote instances definition"
This reverts commit 04b12701d770ecbeefb3116dafa5649182fbf7da.

Signed-off-by: Robert Lubos <robert.lubos@nordicsemi.no>

--- a/dts/arm/nordic/nrf52840.dtsi
+++ b/dts/arm/nordic/nrf52840.dtsi
@@ -181,12 +181,11 @@
 			status = "okay";
 		};
 
-		gpiote: gpiote0: gpiote@40006000 {
+		gpiote: gpiote@40006000 {
 			compatible = "nordic,nrf-gpiote";
 			reg = <0x40006000 0x1000>;
 			interrupts = <6 5>;
 			status = "disabled";
-			instance = <0>;
 		};
 
 		adc: adc@40007000 {
@@ -526,7 +525,6 @@
 			#gpio-cells = <2>;
 			status = "disabled";
 			port = <0>;
-			gpiote-instance = <&gpiote>;
 		};
 
 		gpio1: gpio@50000300 {
@@ -538,7 +536,6 @@
 			ngpios = <16>;
 			status = "disabled";
 			port = <1>;
-			gpiote-instance = <&gpiote>;
 		};
 
 		cryptocell: crypto@5002a000 {
