--- a/dts/arm/nordic/nrf51822.dtsi
+++ b/dts/arm/nordic/nrf51822.dtsi
@@ -131,12 +131,11 @@
 			status = "disabled";
 		};
 
-		gpiote: gpiote0: gpiote@40006000 {
+		gpiote: gpiote@40006000 {
 			compatible = "nordic,nrf-gpiote";
 			reg = <0x40006000 0x1000>;
 			interrupts = <6 NRF_DEFAULT_IRQ_PRIORITY>;
 			status = "disabled";
-			instance = <0>;
 		};
 
 		adc: adc@40007000 {
@@ -317,7 +316,6 @@
 			#gpio-cells = <2>;
 			status = "disabled";
 			port = <0>;
-			gpiote-instance = <&gpiote>;
 		};
 	};
 };
