--- a/dts/arm/nordic/nrf52811.dtsi
+++ b/dts/arm/nordic/nrf52811.dtsi
@@ -167,12 +167,11 @@
 			status = "disabled";
 		};
 
-		gpiote: gpiote0: gpiote@40006000 {
+		gpiote: gpiote@40006000 {
 			compatible = "nordic,nrf-gpiote";
 			reg = <0x40006000 0x1000>;
 			interrupts = <6 5>;
 			status = "disabled";
-			instance = <0>;
 		};
 
 		adc: adc@40007000 {
@@ -373,7 +372,6 @@
 			#gpio-cells = <2>;
 			status = "disabled";
 			port = <0>;
-			gpiote-instance = <&gpiote>;
 		};
 	};
 };
