--- a/dts/arm/nordic/nrf52832.dtsi
+++ b/dts/arm/nordic/nrf52832.dtsi
@@ -179,12 +179,11 @@
 			status = "okay";
 		};
 
-		gpiote: gpiote0: gpiote@40006000 {
+		gpiote: gpiote@40006000 {
 			compatible = "nordic,nrf-gpiote";
 			reg = <0x40006000 0x1000>;
 			interrupts = <6 5>;
 			status = "disabled";
-			instance = <0>;
 		};
 
 		adc: adc@40007000 {
@@ -466,7 +465,6 @@
 			#gpio-cells = <2>;
 			status = "disabled";
 			port = <0>;
-			gpiote-instance = <&gpiote>;
 		};
 	};
 };
