--- a/dts/arm/nordic/nrf52833.dtsi
+++ b/dts/arm/nordic/nrf52833.dtsi
@@ -186,12 +186,11 @@
 			status = "okay";
 		};
 
-		gpiote: gpiote0: gpiote@40006000 {
+		gpiote: gpiote@40006000 {
 			compatible = "nordic,nrf-gpiote";
 			reg = <0x40006000 0x1000>;
 			interrupts = <6 5>;
 			status = "disabled";
-			instance = <0>;
 		};
 
 		adc: adc@40007000 {
@@ -522,7 +521,6 @@
 			#gpio-cells = <2>;
 			status = "disabled";
 			port = <0>;
-			gpiote-instance = <&gpiote>;
 		};
 
 		gpio1: gpio@50000300 {
@@ -534,7 +532,6 @@
 			ngpios = <10>;
 			status = "disabled";
 			port = <1>;
-			gpiote-instance = <&gpiote>;
 		};
 	};
 };
