Revert "[nrf fromtree] Bluetooth: Mesh: Rename prov_dev->provisionee"
This reverts commit d7cbe1794778949c4163bdb328db13b409d55173.

Signed-off-by: Robert Lubos <robert.lubos@nordicsemi.no>

--- a/subsys/bluetooth/mesh/Kconfig
+++ b/subsys/bluetooth/mesh/Kconfig
@@ -240,7 +240,7 @@ config BT_MESH_PB_GATT
 	select BT_MESH_GATT_SERVER
 	select BT_MESH_PROV
 	select BT_MESH_PB_GATT_COMMON
-	select BT_MESH_PROVISIONEE
+	select BT_MESH_PROV_DEVICE
 	help
 	  Enable this option to allow the device to be provisioned over
 	  GATT.
@@ -268,16 +268,7 @@ config BT_MESH_PB_GATT_CLIENT
 endif # BT_CONN
 
 config BT_MESH_PROV_DEVICE
-	bool "[DEPRECATED] Provisioning device role support"
-	select DEPRECATED
-	select BT_MESH_PROVISIONEE
-	help
-	  Enable this option to allow the device to be provisioned into a mesh network.
-	  The option is marked as deprecated and will be replaced by BT_MESH_PROVISIONEE
-	  option.
-
-config BT_MESH_PROVISIONEE
-	bool "Provisionee role support"
+	bool "Provisioning device role support"
 	depends on BT_MESH_PB_ADV || BT_MESH_PB_GATT
 	default y
 	help
@@ -285,7 +276,7 @@ config BT_MESH_PROVISIONEE
 
 config BT_MESH_PROV_OOB_PUBLIC_KEY
 	bool "OOB Public key support"
-	depends on BT_MESH_PROVISIONEE
+	depends on BT_MESH_PROV_DEVICE
 	help
 	  Enable this option if public key is to be exchanged via Out of Band (OOB) technology.
 
