--- a/modules/Kconfig
+++ b/modules/Kconfig
@@ -39,6 +39,7 @@ source "modules/Kconfig.nxp_s32"
 source "modules/Kconfig.renesas_fsp"
 source "modules/Kconfig.rust"
 source "modules/Kconfig.simplelink"
+source "modules/Kconfig.mspm0"
 source "modules/Kconfig.sof"
 source "modules/Kconfig.stm32"
 source "modules/Kconfig.syst"
