drivers: uaol: add a driver for Intel UAOL IP
This adds a driver for USB Audio Offload Link (UAOL) IP
on Intel ACE2.0 and ACE3.0 platforms.

Signed-off-by: Tomasz Lissowski <tomasz.lissowski@intel.com>

--- a/dts/xtensa/intel/intel_adsp_ace20_lnl.dtsi
+++ b/dts/xtensa/intel/intel_adsp_ace20_lnl.dtsi
@@ -173,6 +173,21 @@
 			status = "okay";
 		};
 
+		hdamluaol: hdamluaol@d40 {
+			compatible = "intel,adsp-hda-uaol-cap";
+			reg = <0xd40 0x40>;
+			status = "okay";
+		};
+
+		uaol0: uaol@f000 {
+			compatible = "intel,adsp-uaol";
+			reg = <0x0000f000 0x1000>;
+			shim-offset = <0x0>;
+			ip-offset = <0x100>;
+			link = <0>;
+			power-domains = <&hst_domain>;
+		};
+
 		dmic0: dai-dmic0@10100 {
 			compatible = "intel,dai-dmic";
 			reg = <0x10100 0x8000>;
