[nxp noup] samples: tfm_tests : added RW61x platform support
Added RW61x platform support in existing
tfm-integration tests

Signed-off-by: Waqar Tahir <waqar.tahir@nxp.com>

--- a/samples/tfm_integration/psa_crypto/sample.yaml
+++ b/samples/tfm_integration/psa_crypto/sample.yaml
@@ -19,6 +19,7 @@ tests:
       - nrf5340dk/nrf5340/cpuapp/ns
       - nrf9160dk/nrf9160/ns
       - stm32l562e_dk/stm32l562xx/ns
+      - rd_rw612_bga/rw612/ns
       - bl5340_dvk/nrf5340/cpuapp/ns
       - max32657evkit/max32657/ns
     integration_platforms:
