--- a/samples/net/wifi/shell/nxp/overlay_rw612.conf
+++ b/samples/net/wifi/shell/nxp/overlay_rw612.conf
@@ -64,6 +64,7 @@ CONFIG_NET_IPV6_FRAGMENT=y
 CONFIG_NET_IPV6_FRAGMENT_MAX_COUNT=3
 CONFIG_NET_IPV6_FRAGMENT_MAX_PKT=8
 CONFIG_NET_IPV6_FRAGMENT_TIMEOUT=3
+CONFIG_NET_DHCPV4_SERVER_ICMP_PROBE_TIMEOUT=100
 CONFIG_NET_MAX_CONN=10
 
 # net threads priority
