[nxp noup] samples: tfm_tests : added frdm_rw612 board support
Added frdm_rw612 board support in existing
tfm-integration tests

Signed-off-by: Waqar Tahir <waqar.tahir@nxp.com>

(cherry picked from commit c3e5fbe)

--- a/samples/tfm_integration/tfm_regression_test/sample.yaml
+++ b/samples/tfm_integration/tfm_regression_test/sample.yaml
@@ -12,6 +12,7 @@ common:
     - stm32h573i_dk/stm32h573xx/ns
     - frdm_mcxn947/mcxn947/cpu0/ns
     - rd_rw612_bga/rw612/ns
+    - frdm_rw612/rw612/ns
   integration_platforms:
     - nrf5340dk/nrf5340/cpuapp/ns
   harness: console
@@ -38,6 +39,7 @@ tests:
   sample.tfm.regression_sfn:
     platform_exclude:
       - rd_rw612_bga/rw612/ns
+      - frdm_rw612/rw612/ns
     platform_allow:
       - max32657evkit/max32657/ns
     extra_args:
