--- a/samples/tfm_integration/tfm_ipc/sample.yaml
+++ b/samples/tfm_integration/tfm_ipc/sample.yaml
@@ -20,6 +20,7 @@ tests:
       - stm32h573i_dk/stm32h573xx/ns
       - frdm_mcxn947/mcxn947/cpu0/ns
       - rd_rw612_bga/rw612/ns
+      - frdm_rw612/rw612/ns
     integration_platforms:
       - mps2/an521/cpu0/ns
     harness: console
@@ -37,6 +38,7 @@ tests:
     platform_allow:
       - mps2/an521/cpu0/ns
       - rd_rw612_bga/rw612/ns
+      - frdm_rw612/rw612/ns
       - nrf54l15dk/nrf54l15/cpuapp/ns
       - nrf54l15dk/nrf54l10/cpuapp/ns
       - nrf54lm20dk/nrf54lm20a/cpuapp/ns
