--- a/samples/tfm_integration/tfm_ipc/sample.yaml
+++ b/samples/tfm_integration/tfm_ipc/sample.yaml
@@ -18,6 +18,7 @@ tests:
       - bl5340_dvk/nrf5340/cpuapp/ns
       - b_u585i_iot02a/stm32u585xx/ns
       - rd_rw612_bga/rw612/ns
+      - frdm_rw612/rw612/ns
     integration_platforms:
       - mps2/an521/cpu0/ns
     harness: console
@@ -35,6 +36,7 @@ tests:
     platform_allow:
       - mps2/an521/cpu0/ns
       - rd_rw612_bga/rw612/ns
+      - frdm_rw612/rw612/ns
       - nrf54l15dk/nrf54l15/cpuapp/ns
       - nrf54l15dk/nrf54l10/cpuapp/ns
       - nrf54lm20dk/nrf54lm20a/cpuapp/ns
