[nxp toup] hostap: add CONFIG_RRM_MSR_REPORT_LEN
For MBO beacon report test case, if there are too many matched neighbor
AP, the RRM measurement report frame length may exceed 2K bytes by
default and this packet will be dropped in wifi driver as it's too long.
Now add this custom length config to avoid the packet got dropped.

Signed-off-by: Maochen Wang <maochen.wang@nxp.com>

--- a/modules/hostap/Kconfig
+++ b/modules/hostap/Kconfig
@@ -633,6 +633,14 @@ config NO_RRM
 config NO_WMM_AC
 	bool
 
+config RRM_MSR_REPORT_LEN
+	int "RRM measurement report frame length"
+	default 1500
+	depends on WIFI_NM_WPA_SUPPLICANT_RRM
+
+config WMM_AC
+	bool
+
 config DPP
 	bool
 
