Bluetooth: Classic: GAP: add link mode policy handle code
Add bt_conn_enter_sniff_mode/bt_conn_exit_sniff_mode api control
the sniff mode, handle BT_HCI_EVT_MODE_CHANGE event to notify
the host that the mode has been changed and link_mode_changed
callback to notify application.

Signed-off-by: Zhenwei Fang <fangzhenwei@xiaomi.com>

--- a/subsys/bluetooth/host/classic/Kconfig
+++ b/subsys/bluetooth/host/classic/Kconfig
@@ -229,6 +229,13 @@ config BT_COD
 	  consult the following link:
 	  https://www.bluetooth.com/specifications/assigned-numbers
 
+config BT_POWER_MODE_CONTROL
+	bool "Bluetooth Power Mode Control(Active/Sniff)"
+	help
+	  This option enables the power mode control feature. This feature
+	  allows the application to control the power mode of the Bluetooth
+	  controller.
+
 endif # BT_CLASSIC
 
 endmenu
