[nxp noup] wifi: fix the build error during upmerge
Add els_pkc.
Fix build error during upmerge.

Signed-off-by: Maochen Wang <maochen.wang@nxp.com>

--- a/samples/net/wifi/shell/nxp/overlay_hostap_rw612.conf
+++ b/samples/net/wifi/shell/nxp/overlay_hostap_rw612.conf
@@ -33,7 +33,12 @@ CONFIG_MBEDTLS_HEAP_SIZE=75072
 # TLSv1.3
 CONFIG_EAP_TLSV1_3=y
 
-# priority
+# Include els_pkc in build
+CONFIG_MCUX_ELS_PKC=y
+CONFIG_MCUX_PSA_CRYPTO_DRIVER_ELS_PKC=y
+CONFIG_MCUX_PSA_CRYPTO_DRIVER_ELS_PKC_THREAD=y
+
+#priority
 CONFIG_WIFI_NM_WPA_SUPPLICANT_WQ_PRIO=3
 CONFIG_WIFI_NM_WPA_SUPPLICANT_PRIO=3
 
