--- a/samples/net/wifi/shell/boards/overlay_hostap_rw612.conf
+++ b/samples/net/wifi/shell/boards/overlay_hostap_rw612.conf
@@ -24,6 +24,11 @@ CONFIG_MBEDTLS_SSL_MAX_CONTENT_LEN=8192
 CONFIG_MBEDTLS_ENABLE_HEAP=y
 CONFIG_MBEDTLS_HEAP_SIZE=69952
 
+# Include els_pkc in build
+CONFIG_MCUX_ELS_PKC=y
+CONFIG_MCUX_PSA_CRYPTO_DRIVER_ELS_PKC=y
+CONFIG_MCUX_PSA_CRYPTO_DRIVER_ELS_PKC_THREAD=y
+
 #priority
 CONFIG_WIFI_NM_WPA_SUPPLICANT_WQ_PRIO=3
 CONFIG_WIFI_NM_WPA_SUPPLICANT_PRIO=3
