west.yml: Drop bouffalolab SDK dependency
This replace the SDK 1.4.2 by a direct register access aproach. This
means that future operations on hal_bouffalolab do not require any
dependency of a SDK from Bouffalo Lab anymore.

The code was inspired by the newer SDK 2.0.

Signed-off-by: Camille BAUD <mail@massdriver.space>
Signed-off-by: Gerson Fernando Budke <nandojve@gmail.com>

--- a/west.yml
+++ b/west.yml
@@ -164,9 +164,9 @@ manifest:
       groups:
         - hal
     - name: hal_bouffalolab
-      remote: nandojve
+      revision: main
       path: modules/hal/bouffalolab
-      revision: sdk-v1.4.5
+      remote: nandojve
       groups:
         - hal
     - name: hal_espressif
