--- a/modules/Kconfig
+++ b/modules/Kconfig
@@ -22,6 +22,7 @@ osource "$(KCONFIG_BINARY_DIR)/Kconfig.modules"
 
 source "modules/Kconfig.altera"
 source "modules/Kconfig.atmel"
+source "modules/Kconfig.bouffalolab"
 source "modules/Kconfig.chre"
 source "modules/Kconfig.cypress"
 source "modules/Kconfig.eos_s3"
