--- a/samples/net/wifi/shell/sample.yaml
+++ b/samples/net/wifi/shell/sample.yaml
@@ -13,6 +13,7 @@ tests:
       - disco_l475_iot1
       - reel_board
       - siwx917_rb4338a
+      - rd_rw612_bga
     integration_platforms:
       - cc3220sf_launchxl
   sample.net.wifi.mikroe_wifi_bt_click:
