--- a/MAINTAINERS.yml
+++ b/MAINTAINERS.yml
@@ -3446,6 +3446,21 @@ ADI Platforms:
   labels:
     - "platform: ADI"
 
+Bouffalolab Platforms:
+  status: maintained
+  maintainers:
+    - nandojve
+  files:
+    - boards/bouffalolab/
+    - boards/common/*bflb*
+    - drivers/*/*bflb*
+    - dts/riscv/bouffalolab/
+    - dts/bindings/*/bflb,*
+    - scripts/west_commands/*/*bflb*
+    - soc/bouffalolab/
+  labels:
+    - "platform: bouffalolab"
+
 Broadcom Platforms:
   status: odd fixes
   files:
@@ -4759,6 +4774,16 @@ West:
     - modules/Kconfig.atmel
   labels:
     - "platform: Microchip SAM"
+
+"West project: hal_bouffalolab":
+  status: maintained
+  maintainers:
+    - nandojve
+  files:
+    - modules/Kconfig.bouffalolab
+    - modules/hal_bouffalolab/
+  labels:
+    - "platform: Bouffalo Lab"
 
 "West project: hal_cypress":
   status: maintained
