drivers: stepper: Add stepper driver for allegro a4988
Adding stepper driver for allegro a4988 DMOS microstepping driver.

Signed-off-by: Armin Kessler <armin.kessler@me.com>

--- a/drivers/stepper/Kconfig
+++ b/drivers/stepper/Kconfig
@@ -31,6 +31,7 @@ rsource "step_dir/Kconfig"
 comment "Stepper Drivers"
 
 # zephyr-keep-sorted-start
+rsource "Kconfig.a4988"
 rsource "Kconfig.fake"
 rsource "Kconfig.gpio"
 rsource "adi_tmc/Kconfig"
