soc: raspberrypi: Defining memory-region with devicetree
The definition of memory areas will be changed to use DeviceTree,
which makes it easier to coexist with other Zephyr functions.

Signed-off-by: TOKITA Hiroshi <tokita.hiroshi@gmail.com>

--- a/dts/arm/raspberrypi/rpi_pico/rp2040.dtsi
+++ b/dts/arm/raspberrypi/rpi_pico/rp2040.dtsi
@@ -429,6 +429,14 @@
 		io-channels = <&adc 4>;
 		status = "disabled";
 	};
+
+	boot_flash: flash@10000000 {
+		compatible = "zephyr,memory-region";
+		reg = <0x10000000 0x100>;
+		zephyr,memory-region = "BOOT_FLASH";
+		zephyr,memory-region-flags = "r";
+		status = "okay";
+	};
 };
 
 &nvic {
