soc: raspberrypi: rpi_pico: Use zephyr_linker_sources to define sections
Use zephyr_linker_sources() to separate definitions of soc-specific
sections.

Also, we can directly include
`include/zephyr/arch/arm/cortex_m/scripts/linker.ld` in CMakeLists.txt,
which will fit Zephyr's build system properly.

Signed-off-by: TOKITA Hiroshi <tokita.hiroshi@gmail.com>

--- a/soc/raspberrypi/rpi_pico/rp2040/CMakeLists.txt
+++ b/soc/raspberrypi/rpi_pico/rp2040/CMakeLists.txt
@@ -3,4 +3,8 @@
 
 zephyr_include_directories(.)
 
-set(SOC_LINKER_SCRIPT ${CMAKE_CURRENT_SOURCE_DIR}/linker.ld CACHE INTERNAL "")
+zephyr_linker_sources_ifdef(CONFIG_RP2_REQUIRES_SECOND_STAGE_BOOT
+	SECTIONS sections.ld
+)
+
+set(SOC_LINKER_SCRIPT ${ZEPHYR_BASE}/include/zephyr/arch/arm/cortex_m/scripts/linker.ld CACHE INTERNAL "")
