--- a/soc/raspberrypi/rpi_pico/rp2350/CMakeLists.txt
+++ b/soc/raspberrypi/rpi_pico/rp2350/CMakeLists.txt
@@ -7,4 +7,6 @@ zephyr_library_sources(soc.c)
 
 zephyr_include_directories(.)
 
-set(SOC_LINKER_SCRIPT ${CMAKE_CURRENT_SOURCE_DIR}/linker.ld CACHE INTERNAL "")
+zephyr_linker_sources(SECTIONS sections.ld)
+
+set(SOC_LINKER_SCRIPT ${ZEPHYR_BASE}/include/zephyr/arch/arm/cortex_m/scripts/linker.ld CACHE INTERNAL "")
