--- a/drivers/i2c/Kconfig
+++ b/drivers/i2c/Kconfig
@@ -122,6 +122,7 @@ source "drivers/i2c/Kconfig.andes_atciic100"
 source "drivers/i2c/Kconfig.b91"
 source "drivers/i2c/Kconfig.bcm_iproc"
 source "drivers/i2c/Kconfig.cc13xx_cc26xx"
+source "drivers/i2c/Kconfig.mspm0"
 source "drivers/i2c/Kconfig.dw"
 source "drivers/i2c/Kconfig.ene"
 source "drivers/i2c/Kconfig.esp32"
