--- a/drivers/watchdog/CMakeLists.txt
+++ b/drivers/watchdog/CMakeLists.txt
@@ -24,6 +24,7 @@ zephyr_library_sources_ifdef(CONFIG_WDT_MCUX_IMX_WDOG wdt_mcux_imx_wdog.c)
 zephyr_library_sources_ifdef(CONFIG_WDT_MCUX_WDOG wdt_mcux_wdog.c)
 zephyr_library_sources_ifdef(CONFIG_WDT_MCUX_WDOG32 wdt_mcux_wdog32.c)
 zephyr_library_sources_ifdef(CONFIG_WDT_MCUX_WWDT wdt_mcux_wwdt.c)
+zephyr_library_sources_ifdef(CONFIG_WDT_MSPM0 wdt_mspm0.c)
 zephyr_library_sources_ifdef(CONFIG_WDT_NPCX wdt_npcx.c)
 zephyr_library_sources_ifdef(CONFIG_WDT_NPM1300 wdt_npm1300.c)
 zephyr_library_sources_ifdef(CONFIG_WDT_NPM2100 wdt_npm2100.c)
