--- a/drivers/watchdog/Kconfig
+++ b/drivers/watchdog/Kconfig
@@ -94,6 +94,8 @@ source "drivers/watchdog/Kconfig.rpi_pico"
 
 source "drivers/watchdog/Kconfig.gd32"
 
+source "drivers/watchdog/Kconfig.mspm0"
+
 source "drivers/watchdog/Kconfig.npm1300"
 
 source "drivers/watchdog/Kconfig.npm2100"
