--- a/samples/bluetooth/central_ht/overlay-wifi-nxp.conf
+++ b/samples/bluetooth/central_ht/overlay-wifi-nxp.conf
@@ -124,6 +124,7 @@ CONFIG_WIFI_NM_WPA_SUPPLICANT_INF_MON=n
 CONFIG_WIFI_NM_HOSTAPD_AP=y
 CONFIG_WIFI_NM_WPA_SUPPLICANT_WPS=y
 CONFIG_WIFI_NM_HOSTAPD_WPS=y
+CONFIG_SAE_PWE_EARLY_EXIT=y
 
 # Enable mbedtls
 CONFIG_MBEDTLS=y
