ci: Update deprecated 'zephyr' toolchain variant references
This commit updates all references to the `zephyr` toolchain variant, which
has been deprecated, to `zephyr-gnu` in the CI workflows.

Signed-off-by: Stephanos Ioannidis <root@stephanos.io>

--- a/.github/workflows/twister_tests_blackbox.yml
+++ b/.github/workflows/twister_tests_blackbox.yml
@@ -73,7 +73,7 @@ jobs:
       shell: bash
       env:
         ZEPHYR_BASE: ./
-        ZEPHYR_TOOLCHAIN_VARIANT: zephyr
+        ZEPHYR_TOOLCHAIN_VARIANT: zephyr-gnu
       run: |
         echo "Run twister tests"
         source zephyr-env.sh
