[nxp noup] samples: net: wifi: support frdm_rw612 board
add overlay file for frdm_rw612 board.

Signed-off-by: Maochen Wang <maochen.wang@nxp.com>

--- a/samples/net/wifi/shell/sample.yaml
+++ b/samples/net/wifi/shell/sample.yaml
@@ -14,6 +14,7 @@ tests:
       - reel_board
       - siwx917_rb4338a
       - rd_rw612_bga
+      - frdm_rw612
     integration_platforms:
       - cc3220sf_launchxl
   sample.net.wifi.mikroe_wifi_bt_click:
