pm: device: Add power domain get function
Add a function to get power domain device from a pm device.
Prompted by need to run runtime usage checks on pd from pm device.

Signed-off-by: Jacob McClellan <mcclellanjacob@meta.com>

--- a/tests/subsys/pm/power_domain/testcase.yaml
+++ b/tests/subsys/pm/power_domain/testcase.yaml
@@ -5,3 +5,10 @@ tests:
     integration_platforms:
       - native_sim
     tags: pm
+  pm.no_power_domain:
+    platform_allow:
+      - native_sim
+    integration_platforms:
+      - native_sim
+    tags: pm
+    extra_args: CONF_FILE=no_power_domain.conf
