--- a/tests/drivers/flash_api/testcase.yaml
+++ b/tests/drivers/flash_api/testcase.yaml
@@ -17,5 +17,9 @@ tests:
       - driver
       - flash
       - userspace
+    platform_allow:
+      - nrf52840dk/nrf52840
+    integration_platforms:
+      - nrf52840dk/nrf52840
     extra_configs:
       - CONFIG_USERSPACE=y
