--- a/drivers/ethernet/CMakeLists.txt
+++ b/drivers/ethernet/CMakeLists.txt
@@ -18,6 +18,14 @@ zephyr_library_sources_ifdef(CONFIG_ETH_XLNX_GEM
 	phy_xlnx_gem.c
 	)
 
+if(CONFIG_NET_SOCKETS_OFFLOAD)
+  zephyr_library_include_directories(
+    # IP headers
+    ${ZEPHYR_BASE}/subsys/net/ip
+    ${ZEPHYR_BASE}/subsys/net/lib/sockets
+  )
+endif()
+
 zephyr_library_sources_ifdef(CONFIG_ETH_DWMAC		eth_dwmac.c)
 zephyr_library_sources_ifdef(CONFIG_ETH_DWMAC_STM32H7X	eth_dwmac_stm32h7x.c)
 zephyr_library_sources_ifdef(CONFIG_ETH_DWMAC_MMU	eth_dwmac_mmu.c)
@@ -31,7 +39,6 @@ zephyr_library_sources_ifdef(CONFIG_ETH_LITEX_LITEETH	eth_litex_liteeth.c)
 zephyr_library_sources_ifdef(CONFIG_ETH_SMSC911X	eth_smsc911x.c)
 zephyr_library_sources_ifdef(CONFIG_ETH_STELLARIS	eth_stellaris.c)
 zephyr_library_sources_ifdef(CONFIG_ETH_STM32_HAL	eth_stm32_hal.c)
-zephyr_library_sources_ifdef(CONFIG_ETH_W5500		eth_w5500.c)
 zephyr_library_sources_ifdef(CONFIG_ETH_SAM_GMAC	eth_sam_gmac.c)
 zephyr_library_sources_ifdef(CONFIG_ETH_CYCLONEV	eth_cyclonev.c)
 zephyr_library_sources_ifdef(CONFIG_SLIP_TAP		eth_slip_tap.c)
@@ -43,6 +50,11 @@ zephyr_library_sources_ifdef(CONFIG_ETH_XMC4XXX		eth_xmc4xxx.c)
 zephyr_library_sources_ifdef(CONFIG_ETH_TEST		eth_test.c)
 zephyr_library_sources_ifdef(CONFIG_ETH_RENESAS_RA     eth_renesas_ra.c)
 zephyr_library_sources_ifdef(CONFIG_ETH_LAN9250    eth_lan9250.c)
+
+if(CONFIG_ETH_W5500)
+  zephyr_library_sources(eth_w5500.c)
+  zephyr_library_sources_ifdef(CONFIG_NET_SOCKETS_OFFLOAD		eth_w5500_socket.c)
+endif()
 
 if(CONFIG_ETH_NXP_S32_NETC)
   zephyr_library_sources(eth_nxp_s32_netc.c)
