drivers: ethernet: lan8720: auto-mdix support
Added PHY identification verification for LAN8720 through PHY ID
registers and implemented HP Auto-MDIX feature which automatically
adjusts TX/RX pairs.

Signed-off-by: Muhammad Waleed Badar <walid.badar@gmail.com>

--- a/drivers/ethernet/phy/Kconfig
+++ b/drivers/ethernet/phy/Kconfig
@@ -50,6 +50,15 @@ config PHY_MICROCHIP_KSZ8081
 	help
 	  Enable Microchip KSZ8081 Ethernet PHY Driver
 
+config PHY_MICROCHIP_LAN8720
+	bool "Microchip LAN8720 PHY driver"
+	default y
+	depends on DT_HAS_MICROCHIP_LAN8720_ENABLED
+	depends on MDIO
+	depends on GPIO
+	help
+	  Enable Microchip LAN8720 Ethernet PHY driver.
+
 config PHY_TI_DP83825
 	bool "TI DP83825 PHY Driver"
 	default y
