drivers: rtc: add ti rtc driver support
add support for Texas Instruments native RTC support

Signed-off-by: Karthikeyan Krishnasamy <karthikeyan@linumiz.com>

--- a/drivers/rtc/Kconfig
+++ b/drivers/rtc/Kconfig
@@ -59,5 +59,6 @@ source "drivers/rtc/Kconfig.numaker"
 source "drivers/rtc/Kconfig.rv8263"
 source "drivers/rtc/Kconfig.xmc4xxx"
 source "drivers/rtc/Kconfig.nxp_irtc"
+source "drivers/rtc/Kconfig.ti"
 
 endif # RTC
