[nxp toup] boards: frdm_rw612: Move PM3 support
Move the PM3 support over from nxp-zsdk

Signed-off-by: David Leach <david.leach@nxp.com>

--- a/boards/nxp/frdm_rw612/frdm_rw612_common.dtsi
+++ b/boards/nxp/frdm_rw612/frdm_rw612_common.dtsi
@@ -254,6 +254,12 @@ mikrobus_serial: &flexcomm0 {};
 	status = "okay";
 };
 
+/* RTC is the wakeup source for PM modes 3, 4 */
+&rtc_highres {
+	status = "okay";
+	wakeup-source;
+};
+
 &pmu {
 	reset-causes-en = <PMU_RESET_CM33_LOCKUP>,
 			  <PMU_RESET_ITRC>,
