boards: esp32c6_devkitc: Update doc and yaml for PWM
Update files indicating PWM support.

Signed-off-by: Raffael Rostagno <raffael.rostagno@espressif.com>

--- a/boards/espressif/esp32c6_devkitc/esp32c6_devkitc.yaml
+++ b/boards/espressif/esp32c6_devkitc/esp32c6_devkitc.yaml
@@ -10,9 +10,9 @@ supported:
   - watchdog
   - uart
   - dma
+  - pwm
   - spi
   - entropy
 testing:
   ignore_tags:
     - bluetooth
-    - tracing
