west.yml: update hal_espressif for IEEE 802.15.4 support
PRELIMINARY: Pointing to related PR head.

Signed-off-by: Martin Jäger <martin@libre.solar>

--- a/west.yml
+++ b/west.yml
@@ -162,7 +162,7 @@ manifest:
       groups:
         - hal
     - name: hal_espressif
-      revision: 51bf6d7bb2ee053e52f09709097e2444777c868c
+      revision: pull/379/head
       path: modules/hal/espressif
       west-commands: west/west-commands.yml
       groups:
