libc: arcmwdt: use libc-provided errno for RISC-V variant
The RISC-V variant of the classic MetaWare libc provides a thread-safe
errno through TLS and uses it internally, so there is no point in
having the hook. Just use the libc errno like we do for Picolibc.

Signed-off-by: Ilya Tagunov <Ilya.Tagunov@synopsys.com>

--- a/lib/libc/Kconfig
+++ b/lib/libc/Kconfig
@@ -115,6 +115,7 @@ config ARCMWDT_LIBC
 	bool "ARC MWDT C library"
 	depends on !NATIVE_APPLICATION
 	depends on "$(ZEPHYR_TOOLCHAIN_VARIANT)" = "arcmwdt"
+	select LIBC_ERRNO if RISCV
 	help
 	  C library provided by ARC MWDT toolchain.
 
