--- a/tests/lib/cpp/libcxx/testcase.yaml
+++ b/tests/lib/cpp/libcxx/testcase.yaml
@@ -25,7 +25,7 @@ tests:
       - mps2/an385
   cpp.libcxx.glibcxx.picolibc:
     filter: TOOLCHAIN_HAS_PICOLIBC == 1 and CONFIG_PICOLIBC_SUPPORTED
-    toolchain_exclude: xcc
+    toolchain_exclude: xcc arcmwdt
     tags: cpp
     timeout: 60
     extra_configs:
