boards: espressif: esp32c6: Add ieee802154 support
Enable IEEE 802.15.4 driver for esp32c6_devkitc and xiao_esp32c6
boards.

Signed-off-by: Martin Jäger <martin@libre.solar>

--- a/boards/espressif/esp32c6_devkitc/esp32c6_devkitc.dts
+++ b/boards/espressif/esp32c6_devkitc/esp32c6_devkitc.dts
@@ -21,6 +21,7 @@
 		zephyr,shell-uart = &uart0;
 		zephyr,flash = &flash0;
 		zephyr,code-partition = &slot0_partition;
+		zephyr,ieee802154 = &ieee802154;
 	};
 
 	aliases {
@@ -69,5 +70,9 @@
 };
 
 &wdt0 {
+	status = "okay";
+};
+
+&ieee802154 {
 	status = "okay";
 };
