--- a/boards/seeed/xiao_esp32c6/xiao_esp32c6.dts
+++ b/boards/seeed/xiao_esp32c6/xiao_esp32c6.dts
@@ -22,6 +22,7 @@
 		zephyr,shell-uart = &usb_serial;
 		zephyr,flash = &flash0;
 		zephyr,code-partition = &slot0_partition;
+		zephyr,ieee802154 = &ieee802154;
 	};
 
 	leds: leds {
@@ -75,4 +76,8 @@
 	current-speed = <115200>;
 	pinctrl-0 = <&uart0_default>;
 	pinctrl-names = "default";
+};
+
+&ieee802154 {
+	status = "okay";
 };
