--- a/dts/riscv/espressif/esp32c6/esp32c6_common.dtsi
+++ b/dts/riscv/espressif/esp32c6/esp32c6_common.dtsi
@@ -62,6 +62,11 @@
 		status = "disabled";
 	};
 
+	ieee802154: ieee802154 {
+		compatible = "espressif,esp32-ieee802154";
+		status = "disabled";
+	};
+
 	soc {
 		#address-cells = <1>;
 		#size-cells = <1>;
