drivers: pwm: ti: Initial support for PWM driver on MSPM0
Add PWM driver support for TI's MSPMO series. This support is using
General Purpose Timer (TIMG) and General Purpose Timer Advanced (TIMA).

Signed-off-by: Saravanan Sekar <saravanan@linumiz.com>

--- a/drivers/pwm/Kconfig
+++ b/drivers/pwm/Kconfig
@@ -116,6 +116,8 @@ source "drivers/pwm/Kconfig.renesas_ra8"
 
 source "drivers/pwm/Kconfig.ifx_cat1"
 
+source "drivers/pwm/Kconfig.mspm0"
+
 source "drivers/pwm/Kconfig.fake"
 
 endif # PWM
