--- a/tests/subsys/jwt/testcase.yaml
+++ b/tests/subsys/jwt/testcase.yaml
@@ -18,7 +18,7 @@ tests:
       - CONFIG_MBEDTLS_PSA_CRYPTO_EXTERNAL_RNG=y
       - CONFIG_MBEDTLS_PSA_CRYPTO_EXTERNAL_RNG_ALLOW_NON_CSPRNG=y
   libraries.encoding.jwt.rsa.legacy:
-    filter: CSPRNG_ENABLED
+    filter: CSRNG
     extra_configs:
       - CONFIG_JWT_SIGN_RSA_LEGACY=y
   libraries.encoding.jwt.rsa.psa:
