--- a/drivers/entropy/Kconfig
+++ b/drivers/entropy/Kconfig
@@ -5,6 +5,7 @@
 
 menuconfig ENTROPY_GENERATOR
 	bool "Entropy drivers"
+	default y if RNG || CSRNG
 	help
 	  Include entropy drivers in system config.
 
@@ -45,7 +46,7 @@ config ENTROPY_HAS_DRIVER
 	  This is an option to be enabled by individual entropy driver
 	  to signal that there is a true entropy driver.
 
-endif
+endif # ENTROPY_GENERATOR
 
 DT_CHOSEN_Z_ENTROPY := zephyr,entropy
 config ENTROPY_AVAILABLE
