--- a/kernel/Kconfig
+++ b/kernel/Kconfig
@@ -864,7 +864,7 @@ menu "Security Options"
 
 config STACK_CANARIES
 	bool "Compiler stack canaries"
-	depends on ENTROPY_GENERATOR || TEST_RANDOM_GENERATOR
+	select RNG
 	select NEED_LIBC_MEM_PARTITION if !STACK_CANARIES_TLS
 	help
 	  This option enables compiler stack canaries.
@@ -915,7 +915,6 @@ config STACK_POINTER_RANDOM
 	int "Initial stack pointer randomization bounds"
 	depends on !STACK_GROWS_UP
 	depends on MULTITHREADING
-	depends on TEST_RANDOM_GENERATOR || ENTROPY_HAS_DRIVER
 	default 0
 	help
 	  This option performs a limited form of Address Space Layout
@@ -931,6 +930,9 @@ config STACK_POINTER_RANDOM
 
 	  This is currently only implemented for systems whose stack pointers
 	  grow towards lower memory addresses.
+
+config RNG
+	default y if STACK_POINTER_RANDOM > 0
 
 config BOUNDS_CHECK_BYPASS_MITIGATION
 	bool "Bounds check bypass mitigations for speculative execution"
