--- a/subsys/fs/ext2/Kconfig
+++ b/subsys/fs/ext2/Kconfig
@@ -6,6 +6,7 @@
 config FILE_SYSTEM_EXT2
 	bool "Ext2 file system support"
 	depends on FILE_SYSTEM
+	select RNG
 	help
 	  Enable Ext2 file system support.
 
