drivers: convert configuration to RNG/CSRNG
Convert drivers to use new RNG/CSRNG configuration where needed.

Signed-off-by: David Leach <david.leach@nxp.com>

--- a/drivers/ethernet/Kconfig
+++ b/drivers/ethernet/Kconfig
@@ -11,6 +11,9 @@ menuconfig ETH_DRIVER
 
 if ETH_DRIVER
 
+config RNG
+	default y
+
 config ETH_DRIVER_RAW_MODE
 	bool "Ethernet driver without the MAC stack"
 	select NET_RAW_MODE
