--- a/modules/mbedtls/Kconfig
+++ b/modules/mbedtls/Kconfig
@@ -28,6 +28,7 @@ choice MBEDTLS_IMPLEMENTATION
 
 config MBEDTLS_BUILTIN
 	bool "Use Zephyr in-tree mbedTLS version"
+	select CSRNG
 	help
 	  Link with mbedTLS sources included with Zephyr distribution.
 	  Included mbedTLS version is well integrated with and supported
