samples: convert configuration to RNG/CSRNG support
Convert over to automatic configuration of ENTROPY_GENERATOR.

Only use CONFIG_RNG when the sample is directly accessing the sys_rand
API functions. Use CONFIG_ENTROPY_GENERATOR when the sample is directly
accessing the entropy API.

Signed-off-by: David Leach <david.leach@nxp.com>

--- a/samples/net/cloud/aws_iot_mqtt/Kconfig
+++ b/samples/net/cloud/aws_iot_mqtt/Kconfig
@@ -76,6 +76,7 @@ config AWS_EXPONENTIAL_BACKOFF
 	bool "enable exponential backoff"
 	default n if AWS_TEST_SUITE_DQP || AWS_TEST_SUITE_RECV_QOS1
 	default y
+	select RNG
 	help
 	  Enable AWS exponential backoff for reconnecting to AWS MQTT broker.
 
