--- a/samples/net/secure_mqtt_sensor_actuator/prj.conf
+++ b/samples/net/secure_mqtt_sensor_actuator/prj.conf
@@ -22,6 +22,9 @@ CONFIG_NET_SOCKETS_SOCKOPT_TLS=y
 CONFIG_MQTT_LIB=y
 CONFIG_MQTT_LIB_TLS=y
 
+# Probably not needed because of the MBEDTLS
+CONFIG_RNG=y
+
 # Enable Mbed TLS
 CONFIG_MBEDTLS=y
 CONFIG_MBEDTLS_BUILTIN=y
