--- a/samples/net/sockets/echo_client/prj.conf
+++ b/samples/net/sockets/echo_client/prj.conf
@@ -12,7 +12,8 @@ CONFIG_POSIX_API=y
 
 # Kernel options
 CONFIG_MAIN_STACK_SIZE=2048
-CONFIG_ENTROPY_GENERATOR=y
+CONFIG_RNG=y
+#CONFIG_ENTROPY_GENERATOR=y
 CONFIG_TEST_RANDOM_GENERATOR=y
 CONFIG_INIT_STACKS=y
 CONFIG_MAX_THREAD_BYTES=3
