--- a/samples/net/sockets/websocket_client/prj.conf
+++ b/samples/net/sockets/websocket_client/prj.conf
@@ -11,6 +11,7 @@ CONFIG_NET_SOCKETS=y
 CONFIG_ZVFS_POLL_MAX=4
 
 # Network driver config
+CONFIG_RNG=y
 CONFIG_TEST_RANDOM_GENERATOR=y
 
 # Network address config
