tests: Convert tests configs over to RNG/CSRNG
Convert tests that directly use sys_rand API to use
CONFIG_RNG instead of CONFIG_ENTROPY_GENERATE.

Signed-off-by: David Leach <david.leach@nxp.com>

--- a/tests/subsys/ipc/pbuf/prj.conf
+++ b/tests/subsys/ipc/pbuf/prj.conf
@@ -3,6 +3,8 @@ CONFIG_ZTRESS=y
 CONFIG_ZTEST_SHUFFLE=y
 CONFIG_ZTEST_REPEAT=y
 
+CONFIG_RNG=y
+
 CONFIG_IPC_SERVICE=y
 CONFIG_IPC_SERVICE_ICMSG=y
 CONFIG_PBUF=y
