--- a/tests/subsys/logging/log_stress/prj.conf
+++ b/tests/subsys/logging/log_stress/prj.conf
@@ -20,3 +20,5 @@ CONFIG_LOG_BACKEND_UART=n
 CONFIG_LOG_BACKEND_NATIVE_POSIX=n
 CONFIG_LOG_BACKEND_RTT=n
 CONFIG_LOG_BACKEND_XTENSA_SIM=n
+
+CONFIG_RNG=y
