--- a/tests/subsys/lorawan/frag_decoder/prj.conf
+++ b/tests/subsys/lorawan/frag_decoder/prj.conf
@@ -11,8 +11,7 @@ CONFIG_LOG=y
 # LoRa PHY
 CONFIG_LORA=y
 
-# Random number generator required for several LoRaWAN services
-CONFIG_ENTROPY_GENERATOR=y
+CONFIG_RNG=y
 
 # LoRaWAN application layer
 CONFIG_LORAWAN=y
