--- a/tests/benchmarks/mbedtls/prj.conf
+++ b/tests/benchmarks/mbedtls/prj.conf
@@ -2,7 +2,7 @@ CONFIG_TEST=y
 
 # Kernel options
 CONFIG_MAIN_STACK_SIZE=10000
-CONFIG_ENTROPY_GENERATOR=y
+CONFIG_RNG=y
 CONFIG_INIT_STACKS=y
 
 # Logging
