--- a/tests/drivers/uart/uart_mix_fifo_poll/prj.conf
+++ b/tests/drivers/uart/uart_mix_fifo_poll/prj.conf
@@ -4,6 +4,7 @@ CONFIG_TEST_USERSPACE=y
 CONFIG_ZTEST_THREAD_PRIORITY=5
 CONFIG_MAIN_STACK_SIZE=2048
 CONFIG_ZTEST_STACK_SIZE=2048
+CONFIG_RNG=y
 CONFIG_TEST_RANDOM_GENERATOR=y
 CONFIG_COUNTER=y
 
