--- a/tests/net/arp/prj.conf
+++ b/tests/net/arp/prj.conf
@@ -10,7 +10,7 @@ CONFIG_NET_PKT_TX_COUNT=10
 CONFIG_NET_BUF_RX_COUNT=20
 CONFIG_NET_BUF_TX_COUNT=20
 CONFIG_NET_LOG=y
-CONFIG_ENTROPY_GENERATOR=y
+CONFIG_RNG=y
 CONFIG_TEST_RANDOM_GENERATOR=y
 CONFIG_NET_IF_UNICAST_IPV4_ADDR_COUNT=3
 CONFIG_NET_IPV6=n
