--- a/tests/net/checksum_offload/prj.conf
+++ b/tests/net/checksum_offload/prj.conf
@@ -10,7 +10,7 @@ CONFIG_NET_ARP=n
 CONFIG_NET_MAX_CONTEXTS=4
 CONFIG_NET_L2_ETHERNET=y
 CONFIG_NET_LOG=y
-CONFIG_ENTROPY_GENERATOR=y
+CONFIG_RNG=y
 CONFIG_TEST_RANDOM_GENERATOR=y
 CONFIG_NET_IPV6_DAD=n
 CONFIG_NET_IPV6_MLD=n
