--- a/tests/net/context/prj.conf
+++ b/tests/net/context/prj.conf
@@ -10,7 +10,7 @@ CONFIG_NET_CONTEXT_SYNC_RECV=y
 CONFIG_NET_L2_DUMMY=y
 CONFIG_NET_L2_ETHERNET=n
 CONFIG_NET_LOG=y
-CONFIG_ENTROPY_GENERATOR=y
+CONFIG_RNG=y
 CONFIG_TEST_RANDOM_GENERATOR=y
 CONFIG_NET_IPV6_ND=n
 CONFIG_NET_IPV6_DAD=n
