--- a/tests/net/iface/prj.conf
+++ b/tests/net/iface/prj.conf
@@ -10,7 +10,7 @@ CONFIG_NET_L2_ETHERNET=y
 CONFIG_NET_L2_ETHERNET_MGMT=y
 CONFIG_NET_PROMISCUOUS_MODE=y
 CONFIG_NET_LOG=y
-CONFIG_ENTROPY_GENERATOR=y
+CONFIG_RNG=y
 CONFIG_TEST_RANDOM_GENERATOR=y
 CONFIG_NET_IPV6_DAD=n
 CONFIG_NET_IPV6_MLD=n
