--- a/tests/net/igmp/prj.conf
+++ b/tests/net/igmp/prj.conf
@@ -9,7 +9,7 @@ CONFIG_NET_IPV4=y
 CONFIG_NET_IPV4_IGMP=y
 CONFIG_NET_L2_DUMMY=y
 CONFIG_NET_LOG=y
-CONFIG_ENTROPY_GENERATOR=y
+CONFIG_RNG=y
 CONFIG_TEST_RANDOM_GENERATOR=y
 CONFIG_NET_PKT_TX_COUNT=20
 CONFIG_NET_PKT_RX_COUNT=20
