--- a/tests/net/ip-addr/prj.conf
+++ b/tests/net/ip-addr/prj.conf
@@ -11,7 +11,7 @@ CONFIG_NET_PKT_TX_COUNT=2
 CONFIG_NET_BUF_RX_COUNT=5
 CONFIG_NET_BUF_TX_COUNT=5
 CONFIG_NET_LOG=y
-CONFIG_ENTROPY_GENERATOR=y
+CONFIG_RNG=y
 CONFIG_TEST_RANDOM_GENERATOR=y
 CONFIG_NET_IF_MAX_IPV4_COUNT=2
 CONFIG_NET_IF_MAX_IPV6_COUNT=2
