--- a/tests/net/ipv6/prj.conf
+++ b/tests/net/ipv6/prj.conf
@@ -13,7 +13,7 @@ CONFIG_NET_L2_DUMMY=y
 CONFIG_NET_IF_MAX_IPV6_COUNT=2
 CONFIG_NET_DEFAULT_IF_ETHERNET=y
 CONFIG_NET_LOG=y
-CONFIG_ENTROPY_GENERATOR=y
+CONFIG_RNG=y
 CONFIG_TEST_RANDOM_GENERATOR=y
 CONFIG_NET_IPV6_ND=y
 CONFIG_NET_IPV6_DAD=y
