--- a/tests/net/lib/dns_addremove/prj.conf
+++ b/tests/net/lib/dns_addremove/prj.conf
@@ -1,6 +1,6 @@
 CONFIG_NETWORKING=y
 CONFIG_NET_TEST=y
-CONFIG_ENTROPY_GENERATOR=y
+CONFIG_RNG=y
 CONFIG_TEST_RANDOM_GENERATOR=y
 CONFIG_NET_L2_DUMMY=y
 CONFIG_NET_L2_ETHERNET=n
