--- a/tests/net/lib/mqtt/v3_1_1/mqtt_client/prj.conf
+++ b/tests/net/lib/mqtt/v3_1_1/mqtt_client/prj.conf
@@ -5,7 +5,7 @@ CONFIG_ZTEST=y
 CONFIG_NET_DRIVERS=y
 CONFIG_NET_LOOPBACK=y
 
-CONFIG_ENTROPY_GENERATOR=y
+CONFIG_RNG=y
 CONFIG_TEST_RANDOM_GENERATOR=y
 
 CONFIG_NET_IPV6=y
