--- a/tests/net/mld/prj.conf
+++ b/tests/net/mld/prj.conf
@@ -9,7 +9,7 @@ CONFIG_NET_IPV4=n
 CONFIG_NET_L2_DUMMY=y
 CONFIG_NET_L2_ETHERNET=n
 CONFIG_NET_LOG=y
-CONFIG_ENTROPY_GENERATOR=y
+CONFIG_RNG=y
 CONFIG_TEST_RANDOM_GENERATOR=y
 CONFIG_NET_IPV6_ND=y
 CONFIG_NET_IPV6_DAD=y
