--- a/tests/net/net_pkt/prj.conf
+++ b/tests/net/net_pkt/prj.conf
@@ -9,6 +9,6 @@ CONFIG_NET_UDP=y
 CONFIG_NET_BUF_LOG=y
 CONFIG_NET_LOG=y
 CONFIG_NET_BUF_POOL_USAGE=y
-CONFIG_ENTROPY_GENERATOR=y
+CONFIG_RNG=y
 CONFIG_TEST_RANDOM_GENERATOR=y
 CONFIG_NET_ETHERNET_BRIDGE=y
