--- a/tests/net/pm/prj.conf
+++ b/tests/net/pm/prj.conf
@@ -11,7 +11,7 @@ CONFIG_ZVFS_OPEN_MAX=3
 CONFIG_ZTEST_STACK_SIZE=2048
 CONFIG_MAIN_STACK_SIZE=2048
 CONFIG_NET_LOG=y
-CONFIG_ENTROPY_GENERATOR=y
+CONFIG_RNG=y
 CONFIG_TEST_RANDOM_GENERATOR=y
 CONFIG_NET_IF_UNICAST_IPV4_ADDR_COUNT=2
 CONFIG_ZTEST=y
