--- a/tests/net/shell/prj.conf
+++ b/tests/net/shell/prj.conf
@@ -12,7 +12,7 @@ CONFIG_NET_PKT_TX_COUNT=10
 CONFIG_NET_BUF_RX_COUNT=15
 CONFIG_NET_BUF_TX_COUNT=15
 CONFIG_NET_LOG=y
-CONFIG_ENTROPY_GENERATOR=y
+CONFIG_RNG=y
 CONFIG_TEST_RANDOM_GENERATOR=y
 CONFIG_NET_IF_UNICAST_IPV6_ADDR_COUNT=2
 CONFIG_NET_IF_UNICAST_IPV4_ADDR_COUNT=2
