--- a/tests/net/traffic_class/prj.conf
+++ b/tests/net/traffic_class/prj.conf
@@ -10,7 +10,7 @@ CONFIG_NET_MAX_CONN=8
 CONFIG_NET_L2_ETHERNET=y
 CONFIG_NET_L2_DUMMY=y
 CONFIG_NET_LOG=y
-CONFIG_ENTROPY_GENERATOR=y
+CONFIG_RNG=y
 CONFIG_TEST_RANDOM_GENERATOR=y
 CONFIG_NET_STATISTICS=y
 CONFIG_NET_IPV6_DAD=n
