--- a/tests/net/wifi/wifi_nm/prj.conf
+++ b/tests/net/wifi/wifi_nm/prj.conf
@@ -9,7 +9,7 @@ CONFIG_WIFI_NM=y
 CONFIG_NET_LOG=y
 CONFIG_ENTROPY_GENERATOR=y
 CONFIG_TEST_RANDOM_GENERATOR=y
-CONFIG_ENTROPY_GENERATOR=y
+CONFIG_RNG=y
 CONFIG_TEST_RANDOM_GENERATOR=y
 CONFIG_ZTEST=y
 
