--- a/samples/hello_world/prj.conf
+++ b/samples/hello_world/prj.conf
@@ -1,19 +1,6 @@
-
-
-# CONFIG_MULTITHREADING=y
-CONFIG_GPIO=y
-CONFIG_SERIAL=y
-CONFIG_CODE_DATA_RELOCATION=y
-CONFIG_XIP=y
-CONFIG_RISCV_HAS_PLIC=y
-# CONFIG_INIT_STACK=6000
-# CONFIG_HAVE_CUSTOM_LINKER_SCRIPT=y
-# CONFIG_CUSTOM_LINKER_SCRIPT="linker_secure-iot.ld"
-CONFIG_ISR_STACK_SIZE=2048
-CONFIG_MAIN_STACK_SIZE=2048
+CONFIG_CODE_DATA_RELOCATION=n
+CONFIG_HAVE_CUSTOM_LINKER_SCRIPT=y
+CONFIG_CUSTOM_LINKER_SCRIPT="linker_secure-iot.ld"
+CONFIG_XIP=n
 # CONFIG_FLASH=y
-# CONFIG_FLASH_BASE_ADDRESS=0x90000400
-# CONFIG_MAX_IRQ_PER_AGGREGATOR=58
-
-
-
+CONFIG_FLASH_BASE_ADDRESS=0x90000000
