drivers: entropy: Add ENTROPY_AVAILABLE configuration
Add ENTROPY_AVAILABLE Kconfig to be set when DT zephyr,entropy node
is set. This will be used for dependency in other modules to avoid
circular dependency on ENTROPY_HAS_DRIVER.

Signed-off-by: David Leach <david.leach@nxp.com>

--- a/drivers/entropy/Kconfig
+++ b/drivers/entropy/Kconfig
@@ -46,3 +46,8 @@ config ENTROPY_HAS_DRIVER
 	  to signal that there is a true entropy driver.
 
 endif
+
+DT_CHOSEN_Z_ENTROPY := zephyr,entropy
+config ENTROPY_AVAILABLE
+       bool
+       default y if $(dt_chosen_enabled,$(DT_CHOSEN_Z_ENTROPY))
