--- a/tests/bsim/bluetooth/mesh/overlay_gatt.conf
+++ b/tests/bsim/bluetooth/mesh/overlay_gatt.conf
@@ -5,3 +5,5 @@ CONFIG_BT_MESH_PB_GATT=y
 CONFIG_BT_CENTRAL=y
 CONFIG_BT_MESH_PROXY_CLIENT=y
 CONFIG_BT_MESH_PROXY_SOLICITATION=y
+
+CONFIG_BT_BUF_CMD_TX_COUNT=3
