--- a/tests/drivers/build_all/sensor/sensors_no_default.conf
+++ b/tests/drivers/build_all/sensor/sensors_no_default.conf
@@ -3,6 +3,7 @@ CONFIG_BMC150_MAGN_TRIGGER_DRDY=y
 CONFIG_BMM150_TRIGGER_DIRECT=y
 CONFIG_BMP388_TRIGGER_DIRECT=y
 CONFIG_INA230_TRIGGER=y
+CONFIG_INA700_TRIGGER=y
 CONFIG_LM77_TRIGGER=y
 CONFIG_LSM9DS0_GYRO_TRIGGERS=y
 CONFIG_LSM9DS0_GYRO_TRIGGER_DRDY=y
