MAINTAINERS: update my status
Revert to my old username on west and drop my long-inactive LED strip
involvement.

(I'm intentionally not adding myself back to the devicetree
collaborators list -- I'm not able to help out there at this time.)

Signed-off-by: Martí Bolívar <marti.bolivar@oss.qualcomm.com>

--- a/MAINTAINERS.yml
+++ b/MAINTAINERS.yml
@@ -1774,7 +1774,6 @@ Release Notes:
   maintainers:
     - simonguinot
   collaborators:
-    - mbolivar-ampere
     - soburi
     - thedjnK
   files:
@@ -4423,7 +4422,7 @@ VFS:
 West:
   status: odd fixes
   collaborators:
-    - mbolivar-ampere
+    - mbolivar
     - carlescufi
     - swinslow
     - pdgendt
