--- a/samples/net/wifi/shell/nxp/overlay_hostap_rw612.conf
+++ b/samples/net/wifi/shell/nxp/overlay_hostap_rw612.conf
@@ -27,6 +27,7 @@ CONFIG_MBEDTLS_SSL_MAX_CONTENT_LEN=8192
 # mbedtls heap for enterprise case
 CONFIG_MBEDTLS_ENABLE_HEAP=y
 CONFIG_MBEDTLS_HEAP_SIZE=69952
+CONFIG_MBEDTLS_HAVE_TIME_DATE=y
 
 # TLSv1.3
 CONFIG_EAP_TLSV1_3=y
